2003-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (ChannelImage): The OpacityChannel, MatteChannel,
	and BlackChannel operations set the matte channel to opaque, so
	set image->matte to False for those operations.

2003-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogToBlob): Since MagickSeek(file,0,SEEK_END) is
	used to obtain the Blob size, MagickSeek(file,0,SEEK_SET) must be
	used to restore the seek position.  Thanks to John Cristy for
	bringing this to our attention.

2003-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/bit_stream.h: Added a bit-stream writer function.
	* PerlMagick/t/reference/read/input_tim.miff: Reference image
	was defective.

2003-10-03  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/image.c, magick/image.h: Updated AddCoderOptions to
	accept "flag" keys that have no values. They are placed in the
	coder options map with an empty, zero length string value. Option
	argument syntax is now: "key1[=[value1]],key2[=[value2]],..."

2003-10-03  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/command.c: Updated +coder-options option to not clear the
	entire map of coder options, but accept a list of names to remove
	from the map. Use option argument "*" to clear the entire map of
	coder options.
	* magick/image.c, magick/image.h: Added function
	RemoveCoderOptions. Added cast of signed char to unsigned char and
	int in calls to isspace and isprint.
	* magcik/utility.c: Added cast of signed char to unsigned char and
	int in calls to isspace and isprint. Added special handling of
	+coder-options option in ExpandFilenames function.

2003-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/reference/read/input_tim.miff: The TIM read results
	changed somewhat due to Glenn's ScaleColor5to8 fix.

2003-10-01  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

        * Revised ScaleColor5to8 and ScaleColor6to8 macros to fill in
	the low bytes.